--- a/FE/index.html
+++ b/FE/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trang Quản lý</title>
   </head>
   <body class="font-body bg-gray-200 dark:bg-black">
     
